# internal/api/accounts.go
@@ -23,3 +23,16 @@ func (b *BattleshipImpl) CreateAccount(ctx echo.Context) error {
 	b.accounts.CreateAccount(restPresenter, postBody.Login, postBody.Password)
 	return restPresenter.Error()
 }
+
+func (b *BattleshipImpl) AccountLogin(ctx echo.Context) error {
+	restPresenter := rest.NewRestApiPresenter(ctx)
+
+	var postBody AccountLoginJSONBody
+	if err := ctx.Bind(&postBody); err != nil {
+		restPresenter.SendError(http.StatusBadRequest, "Invalid body to perform login")
+		return restPresenter.Error()
+	}
+
+	b.accounts.Login(restPresenter, postBody.Login, postBody.Password)
+	return restPresenter.Error()
+}
